Fixed dark mode on ability popups and ability tree page height

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,22 @@ body {
     padding: 0px;
 }
 
+.popup {
+    background: var(--popup-background);
+    color: var(--popup-text);
+}
+
+.popup .p-dialog-content {
+    background: var(--popup-background);
+    color: var(--popup-text);
+}
+
+.popup .p-dialog-header {
+    background: var(--toolbar-background);
+    color: var(--toolbar-text);
+    margin-bottom: 1%;
+}
+
 .spacer {
     flex: 1;
 }
