--- a/src/vars.scss
+++ b/src/vars.scss
@@ -8,6 +8,9 @@
 
     --sidebar-background: #222222;
     --sidebar-text: white;
+
+    --popup-background: #333333;
+    --popup-text: white;
 }
 
 :root {
@@ -20,6 +23,9 @@
 
     --sidebar-background: #abb3bb;
     --sidebar-text: black;
+
+    --popup-background: #f0f0f0;
+    --popup-text: black;
 }
 
 
